syntax = "proto3";

message TEST {
	int32 number = 1;
}

message ServerMessage 
{
	oneof message{
		ArduinoConnected arduinoConnectedMessage = 1;
		ClientConnected clientConnectedMessage= 2;
	}
}

message ArduinoConnected{
	int32 arduinoId = 1;
	int32 rfIdCardNo = 2;
}

message ClientConnected{
	int32 rfIdCardNo = 1;
}